--- a/Nodepop/package.json
+++ b/Nodepop/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "cross-env crossDEBUG=nodepop:* nodemon",
-    "initDB":"node ./initDB.js"
+    "dev": "crossDEBUG=nodepop:* nodemon",
+    "initDB": "node ./initDB.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "cross-env": "^7.0.3",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-validator": "^6.9.0",
